--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,9 @@
 			position: absolute;
 			top: 100px;
 			left: 100px;
+			padding-top: 100px;
+			border-top: 100px solid #000;
+			margin-top: 100px;
 		}
 	</style>
 </head>
