More dimension tests

--- a/test/index.html
+++ b/test/index.html
@@ -16,8 +16,11 @@
 			top: 100px;
 			left: 100px;
 			padding-top: 100px;
+			padding-left: 100px;
 			border-top: 100px solid #000;
+			border-left: 100px solid #000;
 			margin-top: 100px;
+			margin-left: 100px;
 		}
 	</style>
 </head>
